--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>母亲节快乐</title>
 </head>
 
-<body  style="line-height:28.95pt;background-color:skyblue;">
+<body  style="line-height:28.95pt;">
 <div style="left:28mm;position:absolute;top:37mm;width:210mm;height:297mm">
 <div style="width:156mm; height:225mm; border:1px">
 
