--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 关于母亲节的通知
 </p>
 
-<p style="text-indent:2em; font-family:FangSong_GB2312; font-size:16pt; color:black">
+<p style="font-family:FangSong_GB2312; font-size:16pt; color:black">
 妈：
 </p>
 <p style="text-indent:2em; font-family:FangSong_GB2312; font-size:16pt; color:black">
